参考文献および本文が長い場合ページ上部の節表示でのエラー

--- a/references.bib
+++ b/references.bib
@@ -1,14 +1,318 @@
-@article{Vaswani2017,
-   author = {A Vaswani},
+@article{Musti2013,
+   author = {F. Mustière, and M. Bouchard, and H. Najaf-Zadeh, and R. Pichevar, and L. Thibault, and H. Saruwatari},
+   journal = {Signal Processing, vol. 93, pp. 321–325},
+   title = {Design of multichannel frequency domain statistical-based enhance- ment systems preserving spatial cues via spectral distances minimization},
+   year = {2013},
+}
+@INPROCEEDINGS{Une2019,
+  author={M. Une, and Y. Kubo, and N. Takamune, and D. Kitamura, and H. Saruwatari, and S. Makino},
+  booktitle={Proceedings of Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC), pp. 1874–1879}, 
+  title={Evaluation of multichannel hearing aid system by rank-constrained spatial covariance matrix estimation}, 
+  year={2019}}
+@article{Takahashi2010,
+   author = {高橋祐, and 猿渡洋, and 鹿野清宏},
+   journal = {電子情報通信学会論文誌 D, vol. 93, no. 3, pp. 312–325},
+   title = {独立成分分析を導入した空間的サブトラクションア レーによるハンズフリー音声認識システムの開発},
+   year = {2010},
+}
+@article{Wiener1964,
+   author = {N. Wiener},
+   journal = {The MIT press},
+   title = {Extrapolation, Interpolation, and Smoothing of Stationary Time Series: With Engineering Applications},
+   year = {1964},
+}
+@article{Capon1969,
+   author = {J. Capon},
+   journal = {Proceedings of the IEEE, vol. 57, no. 8, pp. 1408–1418},
+   title = {High-resolution frequency-wavenumber spectrum analysis},
+   year = {1969},
+}
+@article{Frost1982,
+   author = {O. Frost},
+   journal = {Proceed- ings of the IEEE, vol. 60, no. 8, pp. 926–935},
+   title = {An algorithm for linearly constrained adaptive array processing},
+   year = {1982},
+}
+@article{Grif1982,
+   author = {L. Griffiths and C. Jim},
+   journal = {IEEE Transactions on Antennas and Propagation, vol. 30, no. 1, pp. 27–34},
+   title = {An alternative approach to linearly constrained adaptive beamforming},
+   year = {1982},
+}
+@article{Sawada2019,
+   author = {H. Sawada, and N. Ono, and H. Kameoka, and D. Kitamura, and H. Saruwatari},
+   journal = {APSIPA Transactions on Signal and Information Processing, vol. 8, no. e12, pp. 1–14},
+   title = {A review of blind source separation methods: two converging routes to ILRMA originating from ICA and NMF},
+   year = {2019},
+}
+@article{Lee1999,
+   author = {D. D. Lee and H. S. Seung},
+   journal = {Nature, vol. 401, no. 6755, pp. 788–791},
+   title = {Learning the parts of objects by non-negative matrix factorization},
+   year = {1999},
+}
+@INPROCEEDINGS{Smara2007,
+   author = {P. Smaragdis, and B. Raj, and M. Shashanka},
+   booktitle = {Proceedings of Independent Component Analysis and Signal Separation (ICA), pp. 414–421},
+   title = {Supervised and semi-supervised separation of sounds from single-channel mixtures},
+   year = {2007},
+}
+@article{Comon1994,
+   author = {P. Comon},
+   journal = {Signal Processing, vol. 36, no. 3, pp. 287–314},
+   title = {Independent component analysis, a new concept?},
+   year = {1994},
+}
+@article{Bell1995,
+   author = {A. J. Bell and T. J. Sejnowski},
+   journal = {Neural Computation, vol. 7, no. 6, pp. 1129– 1159},
+   title = {An information-maximization approach to blind separation and blind deconvolution},
+   year = {1995},
+}
+@article{Amari1995,
+   author = {S. Amari, A. Cichocki, and H. Yang},
    journal = {Advances in Neural Information Processing Systems},
-   title = {Attention is all you need},
+   title = {A new learning algorithm for blind signal separation},
+   year = {1995},
+}
+@article{Smara1998,
+   author = {P. Smaragdis},
+   journal = {Neurocomputing, vol. 22, no. 1-3, pp. 21–34},
+   title = {Blind separation of convolved mixtures in the frequency domain},
+   year = {1998},
+}
+@INPROCEEDINGS{Ikeda1999,
+   author = {S. Ikeda and N. Murata},
+   booktitle = {Proceedings of International Conference on Independent Component Analysis and Blind Signal Separation (ICA), pp. 365–371},
+   title = {A method of ica in time frequency domain},
+   year = {1999},
+}
+@article{Saru2006,
+   author = {H. Saruwatari, and T. Kawamura, and T. Nishikawa, and A. Lee, and K. Shikano},
+   journal = {IEEE Transactions on Audio, Speech, and Language Processing, vol. 14, no. 2, pp. 666–67},
+   title = {Blind source separation based on a fast-convergence algorithm combining ICA and beamforming},
+   year = {2006},
+}
+@article{Murata2001,
+   author = {N. Murata, and S. Ikeda, and A. Ziehe},
+   journal = {Neurocomputing, vol. 41, no. 1-4, pp. 1–24},
+   title = {An approach to blind source separation based on temporal structure of speech signals},
+   year = {2001},
+}
+@INPROCEEDINGS{Hiroe2006,
+   author = {A. Hiroe},
+   booktitle = {Proceedings of International Conference on Independent Component Analysis and Blind Signal Separation (ICA), pp. 601–608},
+   title = {Solution of permutation problem in frequency domain ica, using multi- variate probability density functions},
+   year = {2006},
+}
+@article{Kim2007,
+   author = {T. Kim, and H. T. Attias, and S.-Y. Lee, and T.-W. Lee},
+   journal = {IEEE Transactions on Audio, Speech, and Language Processing, vol. 15, no. 1, pp. 70–79},
+   title = {Blind source separation exploiting higher-order frequency dependencies},
+   year = {2007},
+}
+@INPROCEEDINGS{Ono2011,
+   author = {N. Ono},
+   booktitle = {Proceedings of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA), pp. 189–192},
+   title = {Stable and fast update rules for independent vector analysis based on auxiliary function technique},
+   year = {2011},
+}
+@article{Kitamura2016,
+   author = {D. Kitamura, and N. Ono, and H. Sawada, and H. Kameoka, and H. Saruwatari},
+   journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing, vol. 24, no. 9, pp. 1626–1641},
+   title = {Determined blind source separation unifying independent vector analysis and nonnegative matrix factorization},
+   year = {2016},
+}
+@article{Kitamura2018,
+   author = {D. Kitamura, and N. Ono, and H. Sawada, and H. Kameoka, and H. Saruwatari},
+   journal = {Audio source separation, pp. 125–155},
+   title = {Determined blind source separation with independent low-rank matrix analysis},
+   year = {2018},
+}
+@article{Araki2003,
+   author = {S. Araki, and S. Makino, and Y. Hinamoto, and R. Mukai, and T. Nishikawa, and H. Saruwatari},
+   journal = {EURASIP Journal on Advances in Signal Processing, vol. 2003, no. 11, pp. 1–10},
+   title = {Equivalence between frequency-domain blind source separation and frequency- domain adaptive beamforming for convolutive mixtures},
+   year = {2003},
+}
+@article{Kold2019,
+   author = {Z. Koldovský and P. Tichavský},
+   journal = {IEEE Transactions on Signal Processing, vol. 67, no. 4, pp. 1050–1064},
+   title = {Gradient algorithms for complex non-gaussian independent component/vector extraction, question of convergence},
+   year = {2019},
+}
+@article{Boll1979,
+   author = {S. Boll},
+   journal = {IEEE Transactions on Acoustics, Speech, and Signal Processing, vol. 27, no. 2, pp. 113–120},
+   title = {Suppression of acoustic noise in speech using spectral subtraction},
+   year = {1979},
+}
+@article{Kim1996,
+   author = {H.-Y. Kim, and F. Asano, and Y. Suzuki, and T. Sone},
+   journal = {IEICE Trans- actions on Fundamentals of Electronics, Communications and Computer Sciences, vol. 79, no. 12, pp. 2151–2158},
+   title = {Speech enhancement based on short- time spectral amplitude estimation with two-channel beamformer},
+   year = {1996},
+}
+@INPROCEEDINGS{Mizumachi1998,
+   author = {M. Mizumachi and M. Akagi},
+   booktitle = {Proceedings of IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), vol. 2, pp. 1001–1004},
+   title = {Noise reduction by paired-microphones using spectral subtraction},
+   year = {1998},
+}
+@article{Saru2000,
+   author = {H. Saruwatari, and S. Kajita, and K. Takeda, and F. Itakura},
+   journal = {IEICE Transactions on Fundamentals of Electronics, Communications and Computer Sciences, vol. 83, no. 5, pp. 866–876},
+   title = {Speech enhancement using nonlinear microphone array based on noise adaptive complementary beamforming},
+   year = {2000},
+}
+@INPROCEEDINGS{Meyer1997,
+   author = {J. Meyer and K. Simmer},
+   booktitle = {Proceedings of IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), vol. 2, pp. 1167– 1170},
+   title = {Multi-channel speech enhancement in a car environment using wiener filtering and spectral subtraction},
+   year = {1997},
+}
+@article{McCowan2003,
+   author = {I. A. McCowan and H. Bourlard},
+   journal = {IEEE Transactions on Speech and Audio Processing, vol. 11, no. 6, pp. 709– 716},
+   title = {Microphone array post-filter based on noise field coherence},
+   year = {2003},
+}
+@INPROCEEDINGS{Kolossa2004,
+   author = {D. Kolossa and R. Orglmeister},
+   booktitle = {Proceedings of Independent Component Analysis and Blind Signal Separation (ICA), pp. 832–839},
+   title = {Nonlinear postprocessing for blind speech separation},
+   year = {2004},
+}
+@article{Sawada2006,
+   author = {H. Sawada, and S. Araki, and R. Mukai, and S. Makino},
+   journal = {IEEE Transactions on Audio, Speech, and Language Processing, vol. 14, no. 6, pp. 2165–2173},
+   title = {Blind extraction of dominant target sources using ica and time-frequency masking},
+   year = {2006},
+}
+@article{Mori2006,
+   author = {Y. Mori, and H. Saruwatari, and T. Takatani, and S. Ukai, and K. Shikano, and T. Hiekata, and Y. Ikeda, and H. Hashimoto, and T. Morita},
+   journal = {EURASIP Jour- nal on Advances in Signal Processing, vol. 2006, pp. 1–17},
+   title = {Blind separation of acoustic signals combining SIMO- model-based independent component analysis and binary masking},
+   year = {2006},
+}
+@article{Takahashi2009,
+   author = {Y. Takahashi, and T. Takatani, and K. Osako, and H. Saruwatari, and K. Shikano},
+   journal = {IEEE Transactions on Audio, Speech, and Language Processing, vol. 17, no. 4, pp. 650–664},
+   title = {Blind spatial subtraction array for speech enhancement in noisy environment},
+   year = {2009},
+}
+@INPROCEEDINGS{Miyazaki2011,
+   author = {R. Miyazaki, and H. Saruwatari, and R. Wakisaka, and K. Shikano, and T. Takatani},
+   booktitle = {Proceedings of Joint Workshop on Hands-free Speech Communication and Microphone Arrays (HSCMA), pp. 19–24},
+   title = {Theoretical analysis of parametric blind spatial subtraction array and its application to speech recognition performance prediction},
+   year = {2011},
+}
+@article{Saru2010,
+   author = {猿渡洋},
+   journal = {日本音響学会誌, vol. 66, no. 10, pp. 521–526},
+   title = {最近の音声処理に用いられるマイクロホンアレー技術},
+   year = {2010},
+}
+@article{Duong2010,
+   author = {N. Q. K. Duong, and E. Vincent, and R. Gribonval},
+   journal = {IEEE Transactions on Audio, Speech, and Language Processing, vol. 18, no. 7, pp. 1830–1840},
+   title = {Under-determined reverberant audio source separation using a full-rank spatial covariance model},
+   year = {2010},
+}
+@article{Ozerov2010,
+   author = {A. Ozerov and C. Févotte},
+   journal = {IEEE Transactions on Audio, Speech, and Language Processing, vol. 18, no. 3, pp. 550–563},
+   title = {Multichannel nonnegative matrix factorization in convolutive mixtures for audio source separation},
+   year = {2010},
+}
+@article{Sawada2013,
+   author = {H. Sawada, and H. Kameoka, and S. Araki, and N. Ueda},
+   journal = {IEEE Transactions on Audio, Speech, and Language Processing, vol. 21, no. 5, pp. 971–982},
+   title = {Multichannel extensions of nonnegative matrix factorization with complex-valued data},
+   year = {2013},
+}
+@INPROCEEDINGS{Ito2019,
+   author = {N. Ito and T. Nakatani},
+   booktitle = {Proceedings of IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), pp. 371–375},
+   title = {Fastmnmf: Joint diagonalization based accelerated algorithms for multichannel nonnegative matrix factorization},
+   year = {2019},
+}
+@INPROCEEDINGS{Sekiguchi2019,
+   author = {K. Sekiguchi, and A. A. Nugraha, and Y. Bando, and K. Yoshii},
+   booktitle = {Proceedings of European Signal Processing Conference (EUSIPCO), pp. 1–5},
+   title = {Fast multichannel source separation based on jointly diagonalizable spatial covariance matrices},
+   year = {2019},
+}
+@article{Kubo2020,
+   author = {Y. Kubo, and N. Takamune, and D. Kitamura, and H. Saruwatari},
+   journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing, vol. 28, pp. 1948–1963},
+   title = {Blind speech extraction based on rank-constrained spatial covariance matrix estimation with multivariate generalized gaussian distribution},
+   year = {2020},
+}
+@INPROCEEDINGS{Grais2014,
+   author = {E. M. Grais, and M. U. Sen, and H. Erdogan},
+   booktitle = {Proceedings of International Conference on Acoustics, Speech and Signal Processing (ICASSP), pp. 3734–3738},
+   title = {Deep neural networks for single channel source separation},
+   year = {2014},
+}
+@INPROCEEDINGS{Uhlich2015,
+   author = {S. Uhlich, and F. Giron, and Y. Mitsufuji},
+   booktitle = {Proceedings of International Conference on Acoustics, Speech and Signal Processing (ICASSP), pp. 2135–2139},
+   title = {Deep neural network based instrument extraction from music},
+   year = {2015},
+}
+@INPROCEEDINGS{Jansson2017,
+   author = {A. Jansson, and E. J. Humphrey, and N. Montecchio, and R. Bittner, and A. Kumar, and T. Weyde},
+   booktitle = {Proceedings of International Society for Music Information Retrieval (ISMIR)},
+   title = {Singing voice separation with deep U-Net convolutional networks},
    year = {2017},
 }
-@article{Kingma2014,
-   abstract = {We introduce Adam, an algorithm for first-order gradient-based optimization of stochastic objective functions, based on adaptive estimates of lower-order moments. The method is straightforward to implement, is computationally efficient, has little memory requirements, is invariant to diagonal rescaling of the gradients, and is well suited for problems that are large in terms of data and/or parameters. The method is also appropriate for non-stationary objectives and problems with very noisy and/or sparse gradients. The hyper-parameters have intuitive interpretations and typically require little tuning. Some connections to related algorithms, on which Adam was inspired, are discussed. We also analyze the theoretical convergence properties of the algorithm and provide a regret bound on the convergence rate that is comparable to the best known results under the online convex optimization framework. Empirical results demonstrate that Adam works well in practice and compares favorably to other stochastic optimization methods. Finally, we discuss AdaMax, a variant of Adam based on the infinity norm.},
-   author = {Diederik P Kingma and Jimmy Ba},
-   journal = {arXiv preprint arXiv:1412.6980},
-   title = {Adam: A method for stochastic optimization},
-   url = {https://arxiv.org/abs/1412.6980},
-   year = {2014},
+@INPROCEEDINGS{Hershey2016,
+   author = {J. R. Hershey, and Z. Chen, and J. L. Roux, and S. Watanabe},
+   booktitle = {Proceedings of International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+   title = {Deep clustering: Discriminative embeddings for segmentation and separation},
+   year = {2016},
+}
+@article{Nugraha2016,
+   author = {A. A. Nugraha, and A. Liutkus, and E. Vincent},
+   journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing, vol. 24, no. 9, pp. 1652–1664},
+   title = {Multichannel audio source separation with deep neural networks},
+   year = {2016},
+}
+@INPROCEEDINGS{Araki2015,
+   author = {S. Araki, and T. Hayashi, and M. Delcroix, and M. Fujimoto, and K. Takeda, and T. Nakatani},
+   booktitle = {Proceedings of International Conference on Acoustics, Speech and Signal Processing (ICASSP), pp. 116–120},
+   title = {Exploring multi-channel features for denoising-autoencoder-based speech enhancement},
+   year = {2015},
+}
+@INPROCEEDINGS{Tu2017,
+   author = {Y.-H. Tu, and J. Du, and L. Sun, and C.-H. Lee},
+   booktitle = {Proceedings of Asia- Pacific Signal and Information Processing Association Annual Summit and Confer- ence (APSIPA ASC)},
+   title = {LSTM-based iterative mask estimation and post-processing for multi-channel speech enhancement},
+   year = {2017},
+}
+@INPROCEEDINGS{Qian2018,
+   author = {K. Qian, and Y. Zhang, and S. Chang, and X. Yang, and D. Florencio, and M. Hasegawa-Johnson},
+   booktitle = {Proceedings of International Confer- ence on Acoustics, Speech and Signal Processing (ICASSP), pp. 5389–5393},
+   title = {Deep learning based speech beamforming},
+   year = {2018},
+}
+@article{Makishima2019,
+   author = {N. Makishima, and S. Mogami, and N. Takamune, and D. Kitamura, and H. Sumino, and S. Takamichi},
+   journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing, vol. 27, no. 10, pp. 1601-1615},
+   title = {Independent Deeply Learned Matrix Analysis for Determined Audio Source Separation},
+   year = {2019},
+}
+@INPROCEEDINGS{Misawa2021,
+   author = {S. Misawa, and N. Takamune, and T. Nakamura, and D. Kitamura, and H. Saruwatari, and M. Une},
+   booktitle = {Proceedings of Asia- Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)},
+   title = {Speech Enhancement by Noise Self-Supervised Rank-Constrained Spatial Covariance Matrix Estimation via Independent Deeply Learned Matrix Analysis},
+   year = {2021},
+}
+@INPROCEEDINGS{Ishikawa2024,
+   author = {Y. Ishikawa, and K. Konaka, and T. Nakamura, and N. Takamune, and H. Saruwatari},
+   booktitle = {Proceedings of HSCMA},
+   title = {Real-time Speech Extraction Using Spatially Regularized Independent Low-rank Matrix Analysis and Rank-constrained Spatial Covariance Matrix Estimation},
+   year = {2024},
+   url = {https://doi.org/10.48550/arXiv.2403.12477}
 }
